# XFDTD_PARSE

./: .gitignore  CMakeLists.txt  README.md  config.toml
include/xfdtd_parse/: exception.h  material_map.h  object_builder.h  object_map.h  shape_map.h
src/: CMakeLists.txt
src/include/: util.h
src/material_map/: CMakeLists.txt  material_map.cpp
src/object_builder/: CMakeLists.txt  object_builder.cpp
src/object_map/: CMakeLists.txt  object_map.cpp
src/shape_map/: CMakeLists.txt  shape_map.cpp
test/: CMakeLists.txt  test_parse.cpp
