cmake_minimum_required(VERSION 3.20)

project(
  XFDTD_PARSE
  VERSION 0.0.0
  LANGUAGES CXX)

set(XFDTD_PARSE_MAIN_PROJECT OFF)
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
  set(XFDTD_PARSE_MAIN_PROJECT ON)
endif()

if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
  message(FATAL_ERROR "In-source builds are not allowed")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE
      "Release"
      CACHE STRING "Choose the type of build." FORCE)
endif()

find_package(xfdtd_core REQUIRED)

set(XFDTD_PARSE_THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)
set(XFDTD_PARSE_INCLUDE_DIR
    ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src/include
    ${XFDTD_PARSE_THIRD_PARTY_DIR}/tomlplusplus/include)

message(STATUS "XFDTD_PARSE_INCLUDE_DIR: ${XFDTD_PARSE_INCLUDE_DIR}")

include_directories(${XFDTD_PARSE_INCLUDE_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

enable_testing()

add_subdirectory(src)
add_subdirectory(test)
